# Motor-Controller

./: .gitignore  CMakeLists.txt  README.md  package.xml  run.txt  run_simple.txt
include/arcade_control/: ArcadeDriver.hpp  ArcadeSpeed.hpp  MotorDriver.hpp  MotorSpeed.hpp  MotorSpeedController.hpp  MotorSpeeds.hpp  Speed.hpp
include/motor_controller/: ArcadeDriver.hpp  JoyToTwist.hpp  MotorSpeedController.hpp  StateManager.hpp
launch/: launch.py
msg/: State.msg  Transition.msg
src/: ArcadeDriver.cpp  JoyToTwist.cpp  MotorDriver.cpp  MotorSpeedController.cpp  StateManager.cpp  main.cpp
test/: joystick_test.cpp
